# GoBot_Project

ros2_ws/: .gitignore  analyze_odom.py  bridge.py  bridge_final.py  calib.py  end.py  gps_tcp.py  gps_tcp2.py  multi_analyze.py  multi_analyze3.py  zupt_publisher.py
ros2_ws/src/GoBot_Project/src/go2_robot_sdk/go2_robot_sdk/application/services/: robot_control_service.py
ros2_ws/src/GoBot_Project/src/go2_robot_sdk/go2_robot_sdk/domain/interfaces/: robot_controller.py
ros2_ws/src/GoBot_Project/src/go2_robot_sdk/go2_robot_sdk/presentation/: go2_driver_node.py
ros2_ws/src/GoBot_Project/src/go2_robot_sdk/launch/: robot.launch.py  robot_cpp.launch.py
ros2_ws/src/GoBot_Project/src/go2_robot_sdk/urdf/: go2.urdf
ros2_ws/src/GoBot_Project/src/gps_heading_init/: package.xml  setup.cfg  setup.py
ros2_ws/src/GoBot_Project/src/gps_heading_init/config/: frames_2025-11-16_22.24.52.gv  frames_2025-11-16_22.30.37.gv  gps_navigation_bt.xml
ros2_ws/src/GoBot_Project/src/gps_heading_init/data/: gps_data.csv
ros2_ws/src/GoBot_Project/src/gps_heading_init/gps_heading_init/: frames_2025-11-15_17.44.38.gv  gps_heading_init_node.py  gps_path_planner.py  gps_rtk_pid_nav.py  imu_bridge.py  test.py
ros2_ws/src/GoBot_Project/src/gps_heading_init/launch/: gps_heading_init.launch.py
ros2_ws/src/GoBot_Project/src/gps_heading_init/scripts/: gps_path.py  gps_path_visualizer.py  route.html  route_constrained.html  send_waypoints_from_yaml.py
ros2_ws/src/GoBot_Project/src/speech_processor/speech_processor/: tts_node.py
(+4 files in other folders)
